# isolysis

./: .gitignore  README.md  fetch_network.py  main.py  plot_isos.py  prep_coords.py  pyproject.toml  run.ps1  run.sh  st_app.py  st_raster_app.py  st_utils.py  translations.py
api/: app.py  leaf_app.py  path_utils.py  rasters.py  schemas.py  services.py  st_app.py  utils.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: README.md
docs/analysis/: performance-analysis-2025-11-27.md
docs/releases/: changelog.md
frontend/: index.html  script.js  style.css
isolysis/: analysis.py  constants.py  io.py  isochrone.py  models.py  plot.py  raster.py  utils.py
scripts/: fetch_admin.py  fetch_network.py  inspect_admin.py
tests/: conftest.py  test_analysis.py  test_api.py  test_rasters.py
tests/inputs/: coordinates.json
