[project]
name = "isolysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alphashape>=1.3.1",
    "black>=25.1.0",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "osmnx>=2.0.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "routingpy>=1.3.0",
    "scikit-learn>=1.7.1",
]
